--- a/_src/assets/scss/components/_medias-footer.scss
+++ b/_src/assets/scss/components/_medias-footer.scss
@@ -1,6 +1,5 @@
 @media all and (min-width: 768px) {
   .section-footer {
-    width: 100vw;
     flex-direction: row-reverse;
     align-items: flex-start;
     justify-content: space-between;
