--- a/_src/assets/scss/components/_medias-main.scss
+++ b/_src/assets/scss/components/_medias-main.scss
@@ -32,9 +32,7 @@
 @media all and (min-width: 768px) {
   .main-purchase {
     grid-template-columns: 1fr 1fr 1fr;
-    /* grid-template-rows: 90px 112px 90px; */
     row-gap: 20px;
-    width: 100vw;
     .title {
       grid-column: 1/4;
       grid-row: 1/2;
